--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -2,18 +2,26 @@ name: gitHub_workflow
 on: push
 jobs:
   first-job:
+    env: 
+      APP_NAME: "Hello_goodmorning"
     runs-on: ubuntu-latest
     steps:
+      - env: 
+          VERSION: "latest"
       - name: print a statement 1
-        run: echo "Hello World from GitHub Actions!"
+        run: echo "$APP_NAME from GitHub Actions!"
       - name: print a statement 2
-        run: echo "Good Evening"
+        run: echo "Good Evening $VERSION"
   second-job: 
+    env:
+      TOOL: "maven"
     runs-on: ubuntu-latest
     steps:
-        - name: print statement 3
-          run: echo "today date is 10-12-25"
-        - name: print statement 4
-          run: echo "toady is wednesday"
+      - env: 
+          LANGUAGE: "java"
+      - name: print statement 3
+        run: echo "language is $LANGUAGE"
+      - name: print statement 4
+        run: echo "tool is $TOOL"
 
         
